update experience and about me

--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -25,6 +25,11 @@ author_profile: true
         <h2>Work Experience</h2>
         <ul>
             <li>Intern at Group of Urban Computing, <strong>Shanghai AI Laboratory</strong>, Shanghai, China, 09/2021 - Present</li>
+            <li>
+              Intern Researcher, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Massy, France, 12/2024 - 02/2025. 
+              <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
+              <a href="https://www.lincs.fr/people/" target="_blank">[Members]</a>
+            </li>
             <li>Intern Researcher, <strong>Nokia Bell Lab</strong>, Massy, France, 08/2024 - 02/2025</li>
             <li>Intern Researcher, <strong>SenseTime Co., Ltd.</strong>, Shanghai, China, 09/2020 - 08/2021</li>
             <li>Intern at Department of Curriculum, <strong>GuoXin LanQiao Co., Ltd.</strong>, Beijing, China, 08/2020 - 10/2020</li>
@@ -34,7 +39,15 @@ author_profile: true
     <section>
       <h2>Competitions and Awards</h2>
       <ul>
-        <li>Second prize (fourth place overall) in the 2024 Tencent Kaiwu Global AI Competition under the Intelligent Traffic Signal Scheduling track, competing against 2,038 teams from 388 universities worldwide.</li>
+        <li>
+          <strong>Second prize (fourth place overall)</strong> in the 2024 Tencent Kaiwu Global AI Competition 
+          under the <a href="https://aiarena.tencent.com/aiarena/zh/match/open-competition-2024?tab=score" target="_blank">Intelligent Traffic Signal Scheduling track</a>, 
+          competing against 2,038 teams from 388 universities worldwide. 
+          <strong>News:</strong> 
+          <a href="https://tzb.sz.gov.cn/xwzx/gzdt/tzsx/tzgz/content/post_1478546.html" target="_blank">跨区域智谋交锋 看粤港澳高校学子如何“玩转”AI</a>, 
+          <a href="http://www.sz-qb.com/MB/content/202412/16/content_74749.html" target="_blank">深圳侨报</a>, 
+          <a href="https://sse.cuhk.edu.cn/article/1888" target="_blank">理工学院学生在2024年腾讯开悟人工智能全球公开赛获智能交通信号灯调度赛道二等奖</a>, 
+        </li>
       </ul>
     </section>
   </main>
