--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -26,7 +26,7 @@ author_profile: true
         <ul>
             <li>Intern at Group of Urban Computing, <strong>Shanghai AI Laboratory</strong>, Shanghai, China, 09/2021 - Present</li>
             <li>
-              Intern Researcher, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Massy, France, 12/2024 - 02/2025. 
+              Intern Researcher, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Palaiseau, France, 12/2024 - 02/2025. 
               <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
               <a href="https://www.lincs.fr/people/" target="_blank">[Members]</a>
             </li>
