--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -40,13 +40,13 @@ author_profile: true
       <h2>Competitions and Awards</h2>
       <ul>
         <li>
-          <strong>Second prize (fourth place overall)</strong> in the 2024 Tencent Kaiwu Global AI Competition 
+          <strong>Second prize (fourth place overall)</strong> in the <em>2024 Tencent Kaiwu Global AI Competition</em> 
           under the <a href="https://aiarena.tencent.com/aiarena/zh/match/open-competition-2024?tab=score" target="_blank">Intelligent Traffic Signal Scheduling track</a>, 
           competing against 2,038 teams from 388 universities worldwide. 
           <strong>News:</strong> 
           <a href="https://tzb.sz.gov.cn/xwzx/gzdt/tzsx/tzgz/content/post_1478546.html" target="_blank">跨区域智谋交锋 看粤港澳高校学子如何“玩转”AI</a>, 
           <a href="http://www.sz-qb.com/MB/content/202412/16/content_74749.html" target="_blank">深圳侨报</a>, 
-          <a href="https://sse.cuhk.edu.cn/article/1888" target="_blank">理工学院学生在2024年腾讯开悟人工智能全球公开赛获智能交通信号灯调度赛道二等奖</a>, 
+          <a href="https://sse.cuhk.edu.cn/article/1888" target="_blank">理工学院学生在2024年腾讯开悟人工智能全球公开赛获智能交通信号灯调度赛道二等奖</a>. 
         </li>
       </ul>
     </section>
