add itsc-2024 in publications

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -61,6 +61,12 @@ author_profile: true
 
 <ol>
   <li>
+    L. Liu, <u><strong>M. Wang</strong></u>, M. O. Pun and X. Xiong, 
+    "A Multi-Agent Rollout Approach for Highway Bottleneck Decongestion in Mixed Autonomy", 
+    <em>2024 IEEE 27th International Conference on Intelligent Transportation Systems (ITSC), Edmonton, AB, Canada, 2024, pp. 3377-3382.</em> 
+    <a href="https://ieeexplore.ieee.org/document/10920050" target="_blank">[Paper]</a> 
+  </li>
+  <li>
     A. Pang, Z. Xu, <u><strong>M. Wang</strong></u>, M. O. Pun and Y. Kan, 
     "Reinforcement Learning-based Traffic Signal Control Using Delayed Observations for V2X", 
     <em>ICC 2023 - IEEE International Conference on Communications, Rome, Italy, 2023, pp. 4020-4025</em>. 
