update links in experience

--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -28,7 +28,8 @@ author_profile: true
             <li>
               Intern Researcher, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Palaiseau, France, 12/2024 - 02/2025. 
               <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
-              <a href="https://www.lincs.fr/people/" target="_blank">[Members]</a>
+              <a href="https://www.lincs.fr/people/?more=maonan_wang" target="_blank">[Personal Profile at LINCS]</a>, 
+              <a href="https://www.lincs.fr/people/former-members/" target="_blank">[Members]</a>
             </li>
             <li>Intern Researcher, <strong>Nokia Bell Lab</strong>, Massy, France, 08/2024 - 02/2025</li>
             <li>Intern Researcher, <strong>SenseTime Co., Ltd.</strong>, Shanghai, China, 09/2020 - 08/2021</li>
