update icc paper

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -61,6 +61,18 @@ author_profile: true
 
 <ol>
   <li>
+    A. Pang, <u><strong>M. Wang</strong></u>, W. Yue, M. O. Pun, and C. S. Chen, 
+    "V2X-Enabled Air-Ground Traffic Coordination for Enhancing On-Demand Air-Taxi Mobility", 
+    <em>ICC 2025 - IEEE International Conference on Communications, Montreal, QC, Canada, 2025, pp. 3095-3100</em> 
+    <a href="https://ieeexplore.ieee.org/abstract/document/11160730" target="_blank">[Paper]</a> 
+  </li>
+  <li>
+    Y. Xie, <u><strong>M. Wang</strong></u>, D. Zhou, M. O. Pun, and Z. Han, 
+    "Dynamic Urban Air Mobility Ride-Sharing Trajectory Planning Using Radio Maps and Multi-Source Hybrid Attention Reinforcement Learning", 
+    <em>ICC 2025 - IEEE International Conference on Communications, Montreal, QC, Canada, 2025, pp. 2448-2453</em> 
+    <a href="https://ieeexplore.ieee.org/abstract/document/11161585" target="_blank">[Paper]</a> 
+  </li>
+  <li>
     L. Liu, <u><strong>M. Wang</strong></u>, M. O. Pun and X. Xiong, 
     "A Multi-Agent Rollout Approach for Highway Bottleneck Decongestion in Mixed Autonomy", 
     <em>2024 IEEE 27th International Conference on Intelligent Transportation Systems (ITSC), Edmonton, AB, Canada, 2024, pp. 3377-3382.</em> 
