--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-<main>
+<!-- <main>
     <section>
       <h2>Education</h2>
       <ul>
@@ -51,4 +51,98 @@ author_profile: true
         </li>
       </ul>
     </section>
-  </main>
+  </main> -->
+
+<main>
+  <section>
+    <h2>Education</h2>
+    <ul>
+      <li><strong>Ph.D.</strong> at The Chinese University of Hong Kong, Shenzhen, Present</li>
+      <li>
+        <strong>M.S.</strong> at Beijing University of Posts and Telecommunications, 2021
+        <ul>
+          <li><strong>Exchange Student</strong> at Universitetet i Agder, Norway, 2020</li>
+        </ul>
+      </li>
+      <li><strong>B.S.</strong> at Beijing University of Posts and Telecommunications, 2018</li>
+    </ul>
+  </section>
+
+  <section>
+      <h2>Work Experience</h2>
+      <div class="work-experience-list">
+          <p>
+              <strong>Intern</strong> at Group of Urban Computing, <strong>Shanghai AI Laboratory</strong>, Shanghai, China<br>
+              <small>09/2021 - Present</small>
+          </p>
+
+          <p>
+              <strong>Intern Researcher</strong>, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Palaiseau, France<br>
+              <small>12/2024 - 02/2025</small><br>
+              <small>
+                  <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
+                  <a href="https://www.lincs.fr/people/?more=maonan_wang" target="_blank">[Personal Profile at LINCS]</a>, 
+                  <a href="https://www.lincs.fr/people/former-members/" target="_blank">[Members]</a>
+              </small>
+          </p>
+
+          <p>
+              <strong>Intern Researcher</strong>, <strong>Nokia Bell Lab</strong>, Massy, France<br>
+              <small>08/2024 - 02/2025</small>
+          </p>
+
+          <p>
+              <strong>Intern Researcher</strong>, <strong>SenseTime Co., Ltd.</strong>, Shanghai, China<br>
+              <small>09/2020 - 08/2021</small>
+          </p>
+
+          <p>
+              <strong>Intern</strong> at Department of Curriculum, <strong>GuoXin LanQiao Co., Ltd.</strong>, Beijing, China<br>
+              <small>08/2020 - 10/2020</small>
+          </p>
+
+          <p>
+              <strong>Intern</strong> at Department of Security Products and Technology, <strong>Didi Chuxing (DiDi)</strong>, Beijing, China<br>
+              <small>04/2018 - 09/2018</small>
+          </p>
+      </div>
+    </section>
+
+  <section>
+      <h2>Talks</h2>
+      <ul>
+          <li>
+              <strong>Keynote Title:</strong> "Advanced Traffic Prediction with Graph Neural Networks"
+              <br>
+              <small>
+                  Invited Talk at the **IEEE International Conference on Smart City and Urban Computing (ICSCUC)**, Location, Date.
+                  [<a href="#" target="_blank">Slides</a>] / [<a href="#" target="_blank">Video</a>]
+              </small>
+          </li>
+          
+          <li>
+              <strong>Seminar:</strong> "Exploring Fairness and Bias in Large Language Models"
+              <br>
+              <small>
+                  Internal Seminar at the **CUHK-SZ Data Science Research Center**, Shenzhen, Date.
+              </small>
+          </li>
+
+          </ul>
+  </section>
+
+  <section>
+    <h2>Competitions and Awards</h2>
+    <ul>
+      <li>
+        <strong>Second prize (fourth place overall)</strong> in the <em>2024 Tencent Kaiwu Global AI Competition</em> 
+        under the <a href="https://aiarena.tencent.com/aiarena/zh/match/open-competition-2024?tab=score" target="_blank">Intelligent Traffic Signal Scheduling track</a>, 
+        competing against 2,038 teams from 388 universities worldwide. 
+        <strong>News:</strong> 
+        <a href="https://tzb.sz.gov.cn/xwzx/gzdt/tzsx/tzgz/content/post_1478546.html" target="_blank">跨区域智谋交锋 看粤港澳高校学子如何“玩转”AI</a>, 
+        <a href="http://www.sz-qb.com/MB/content/202412/16/content_74749.html" target="_blank">深圳侨报</a>, 
+        <a href="https://sse.cuhk.edu.cn/article/1888" target="_blank">理工学院学生在2024年腾讯开悟人工智能全球公开赛获智能交通信号灯调度赛道二等奖</a>. 
+      </li>
+    </ul>
+  </section>
+</main>
