add talk and update links in work experience

--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -7,36 +7,39 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- <main>
-    <section>
-      <h2>Education</h2>
+<main>
+  <!-- Education -->
+  <section>
+    <h2>Education</h2>
+    <ul>
+      <li><strong>Ph.D.</strong> at The Chinese University of Hong Kong, Shenzhen, Present</li>
+      <li>
+        <strong>M.S.</strong> at Beijing University of Posts and Telecommunications, 2021
+        <ul>
+          <li><strong>Exchange Student</strong> at Universitetet i Agder, Norway, 2020</li>
+        </ul>
+      </li>
+      <li><strong>B.S.</strong> at Beijing University of Posts and Telecommunications, 2018</li>
+    </ul>
+  </section>
+  <!-- Work Experience -->
+  <section>
+      <h2>Work Experience</h2>
       <ul>
-        <li><strong>Ph.D.</strong> at The Chinese University of Hong Kong, Shenzhen, Present</li>
-        <li>
-          <strong>M.S.</strong> at Beijing University of Posts and Telecommunications, 2021
-          <ul>
-            <li><strong>Exchange Student</strong> at Universitetet i Agder, Norway, 2020</li>
-          </ul>
-        </li>
-        <li><strong>B.S.</strong> at Beijing University of Posts and Telecommunications, 2018</li>
+          <li>Joint PhD Candidate at Group of Urban Computing, <strong><a href="https://www.shlab.org.cn/" target="_blank">Shanghai AI Laboratory</a></strong>, Shanghai, China, 09/2021 - Present</li>
+          <li>
+            Intern Researcher, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Palaiseau, France, 12/2024 - 02/2025. 
+            <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
+            <a href="https://www.lincs.fr/people/?more=maonan_wang" target="_blank">[Personal Profile at LINCS]</a>, 
+            <a href="https://www.lincs.fr/people/former-members/" target="_blank">[Members]</a>
+          </li>
+          <li>Intern Researcher, <strong><a href="https://www.nokia.com/bell-labs/" target="_blank">Nokia Bell Lab</a></strong>, Massy, France, 08/2024 - 02/2025</li>
+          <li>Intern Researcher, <strong><a href="https://www.sensetime.com/cn" target="_blank">SenseTime Co., Ltd.</a></strong>, Shanghai, China, 09/2020 - 08/2021</li>
+          <li>Intern at Department of Curriculum, <strong><a href="https://www.guoxinlanqiao.com/" target="_blank">GuoXin LanQiao Co., Ltd.</a></strong>, Beijing, China, 08/2020 - 10/2020</li>
+          <li>Intern at Department of Security Products and Technology, <strong><a href="https://www.didiglobal.com/" target="_blank">Didi Chuxing (DiDi)</a></strong>, Beijing, China, 04/2018 - 09/2018</li>
       </ul>
     </section>
-    <section>
-        <h2>Work Experience</h2>
-        <ul>
-            <li>Intern at Group of Urban Computing, <strong>Shanghai AI Laboratory</strong>, Shanghai, China, 09/2021 - Present</li>
-            <li>
-              Intern Researcher, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Palaiseau, France, 12/2024 - 02/2025. 
-              <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
-              <a href="https://www.lincs.fr/people/?more=maonan_wang" target="_blank">[Personal Profile at LINCS]</a>, 
-              <a href="https://www.lincs.fr/people/former-members/" target="_blank">[Members]</a>
-            </li>
-            <li>Intern Researcher, <strong>Nokia Bell Lab</strong>, Massy, France, 08/2024 - 02/2025</li>
-            <li>Intern Researcher, <strong>SenseTime Co., Ltd.</strong>, Shanghai, China, 09/2020 - 08/2021</li>
-            <li>Intern at Department of Curriculum, <strong>GuoXin LanQiao Co., Ltd.</strong>, Beijing, China, 08/2020 - 10/2020</li>
-            <li>Intern at Department of Security Products and Technology, <strong>Didi Chuxing (DiDi)</strong>, Beijing, China, 04/2018 - 09/2018</li>
-        </ul>
-      </section>
+    <!-- Awards -->
     <section>
       <h2>Competitions and Awards</h2>
       <ul>
@@ -51,98 +54,29 @@ author_profile: true
         </li>
       </ul>
     </section>
-  </main> -->
-
-<main>
-  <section>
-    <h2>Education</h2>
-    <ul>
-      <li><strong>Ph.D.</strong> at The Chinese University of Hong Kong, Shenzhen, Present</li>
-      <li>
-        <strong>M.S.</strong> at Beijing University of Posts and Telecommunications, 2021
-        <ul>
-          <li><strong>Exchange Student</strong> at Universitetet i Agder, Norway, 2020</li>
-        </ul>
-      </li>
-      <li><strong>B.S.</strong> at Beijing University of Posts and Telecommunications, 2018</li>
-    </ul>
-  </section>
-
-  <section>
-      <h2>Work Experience</h2>
-      <div class="work-experience-list">
-          <p>
-              <strong>Intern</strong> at Group of Urban Computing, <strong>Shanghai AI Laboratory</strong>, Shanghai, China<br>
-              <small>09/2021 - Present</small>
-          </p>
-
-          <p>
-              <strong>Intern Researcher</strong>, <strong><a href="https://www.lincs.fr/" target="_blank">LINCS (Laboratory for Information, Networking and Communication Sciences)</a></strong>, Palaiseau, France<br>
-              <small>12/2024 - 02/2025</small><br>
-              <small>
-                  <a href="https://www.lincs.fr/labs-life-on-january-2025/" target="_blank">[News]</a>, 
-                  <a href="https://www.lincs.fr/people/?more=maonan_wang" target="_blank">[Personal Profile at LINCS]</a>, 
-                  <a href="https://www.lincs.fr/people/former-members/" target="_blank">[Members]</a>
-              </small>
-          </p>
-
-          <p>
-              <strong>Intern Researcher</strong>, <strong>Nokia Bell Lab</strong>, Massy, France<br>
-              <small>08/2024 - 02/2025</small>
-          </p>
-
-          <p>
-              <strong>Intern Researcher</strong>, <strong>SenseTime Co., Ltd.</strong>, Shanghai, China<br>
-              <small>09/2020 - 08/2021</small>
-          </p>
-
-          <p>
-              <strong>Intern</strong> at Department of Curriculum, <strong>GuoXin LanQiao Co., Ltd.</strong>, Beijing, China<br>
-              <small>08/2020 - 10/2020</small>
-          </p>
-
-          <p>
-              <strong>Intern</strong> at Department of Security Products and Technology, <strong>Didi Chuxing (DiDi)</strong>, Beijing, China<br>
-              <small>04/2018 - 09/2018</small>
-          </p>
-      </div>
-    </section>
-
-  <section>
+    <!-- Talks -->
+    <section>
       <h2>Talks</h2>
       <ul>
-          <li>
-              <strong>Keynote Title:</strong> "Advanced Traffic Prediction with Graph Neural Networks"
-              <br>
-              <small>
-                  Invited Talk at the **IEEE International Conference on Smart City and Urban Computing (ICSCUC)**, Location, Date.
-                  [<a href="#" target="_blank">Slides</a>] / [<a href="#" target="_blank">Video</a>]
-              </small>
-          </li>
-          
-          <li>
-              <strong>Seminar:</strong> "Exploring Fairness and Bias in Large Language Models"
-              <br>
-              <small>
-                  Internal Seminar at the **CUHK-SZ Data Science Research Center**, Shenzhen, Date.
-              </small>
-          </li>
-
-          </ul>
+        <!-- SUTD Talk -->
+        <li>
+          <strong>Keynote/Talk Title:</strong> "A multi-modal LLM-augmented deep reinforcement learning framework for adaptive traffic signal control"
+          <br>
+          <small>
+              Talk at the <em>Singapore University of Technology and Design (SUTD)</em>. 
+              [<a href="https://www.sutd.edu.sg/events-listing/multi-modal-llm-augmented-deep-reinforcement-learning-framework-maonan-wang/" target="_blank">Details/SUTD Link</a>] 
+          </small>
+        </li>
+        <!-- CCF 数字交通大会 -->
+        <li>
+          <strong>Keynote/Talk Title:</strong> "交通智联·化繁为简——AI大模型赋能智能信控新范式" 
+          <br>
+          <small>
+              Talk at the <em>CCF 数字交通大会 2025</em>. 
+              [<a href="https://www.163.com/dy/article/KEJP7PD50518RMII.html" target="_blank">网易新闻</a>] 
+              [<a href="https://www.msn.com/zh-cn/news/other/%E4%BD%B3%E9%83%BD%E7%A7%91%E6%8A%80%E6%90%BAai%E4%B8%8E%E5%BC%80%E6%BA%90%E9%B8%BF%E8%92%99%E4%BA%AE%E7%9B%B8ccf%E6%95%B0%E5%AD%97%E4%BA%A4%E9%80%9A%E5%A4%A7%E4%BC%9A-%E5%85%B1%E6%8E%A2%E6%99%BA%E6%85%A7%E4%BA%A4%E9%80%9A%E6%96%B0%E8%B7%AF%E5%BE%84/ar-AA1QE2XL" target="_blank">MSN资讯</a>] 
+          </small>
+        </li>
+      </ul>
   </section>
-
-  <section>
-    <h2>Competitions and Awards</h2>
-    <ul>
-      <li>
-        <strong>Second prize (fourth place overall)</strong> in the <em>2024 Tencent Kaiwu Global AI Competition</em> 
-        under the <a href="https://aiarena.tencent.com/aiarena/zh/match/open-competition-2024?tab=score" target="_blank">Intelligent Traffic Signal Scheduling track</a>, 
-        competing against 2,038 teams from 388 universities worldwide. 
-        <strong>News:</strong> 
-        <a href="https://tzb.sz.gov.cn/xwzx/gzdt/tzsx/tzgz/content/post_1478546.html" target="_blank">跨区域智谋交锋 看粤港澳高校学子如何“玩转”AI</a>, 
-        <a href="http://www.sz-qb.com/MB/content/202412/16/content_74749.html" target="_blank">深圳侨报</a>, 
-        <a href="https://sse.cuhk.edu.cn/article/1888" target="_blank">理工学院学生在2024年腾讯开悟人工智能全球公开赛获智能交通信号灯调度赛道二等奖</a>. 
-      </li>
-    </ul>
-  </section>
-</main>
+  </main>
